<?xml version="1.0" encoding="utf-8"?>

<LinearLayout 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:orientation="horizontal" 
    android:background="@drawable/menu_bg"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@+id/menu_mainpage" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:drawableTop="@drawable/menu_mainpage" 
        android:background="@drawable/menu_mainpage_bg"
        android:clickable="true"
        android:text="@string/mainpage" 
        android:gravity="center_horizontal"
        android:layout_weight="1.0" />
    <TextView android:id="@+id/menu_refresh" 
        android:duplicateParentState="false" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:drawableTop="@drawable/menu_refresh" 
        android:background="@drawable/menu_mainpage_bg"
        android:clickable="true"
        android:text="@string/refresh" 
        android:gravity="center_horizontal" 
        android:layout_weight="1.0" />
    <TextView android:id="@+id/menu_favorite" 
        android:duplicateParentState="false" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:drawableTop="@drawable/menu_favorite" 
        android:background="@drawable/menu_mainpage_bg"
        android:clickable="true"
        android:text="@string/favorite" 
        android:gravity="center_horizontal" 
        android:layout_weight="1.0" />
    <TextView android:id="@+id/menu_about" 
        android:duplicateParentState="false" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:drawableTop="@drawable/menu_about" 
        android:background="@drawable/menu_mainpage_bg"
        android:clickable="true"
        android:text="@string/about" 
        android:gravity="center_horizontal" 
        android:layout_weight="1.0" />
    
</LinearLayout>